--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=3000
-DATABASE=mongodb+srv://jonas:<PASSWORD>@cluster0-pwikv.mongodb.net/natours?retryWrites=true
+DATABASE=mongodb+srv://tiptoplives:nXYkrcmOvd7HQzkW@cluster0.gmk9hes.mongodb.net/natours?retryWrites=true&w=majority&appName=Cluster0
 DATABASE_LOCAL=mongodb://localhost:27017/natours
 DATABASE_PASSWORD=On0adDgBCE5ECWh6
 MONGODB_URI=mongodb://localhost:27017
